# dpu_go

./: CMakeLists.txt  INTEGRATION.md  README.md  build_python_package.sh  example.py  test_dpu_interface.py
docs/superpowers/specs/: 2026-04-16-dpu-python-integration-design.md
include/: comch_ctrl.h  ctrl_channel.h  dma_transfer.h  doca_device_utils.h  dpu_cache_api.h  dpu_dma_real.h
python/: setup.py
python/dpu_cache/: __init__.py  _api.py  config.py  exceptions.py
scripts/: build_dpu.sh  build_host.sh  build_shared_lib.sh  preflight_check.sh
src/: comch_ctrl.c  ctrl_channel.c  doca_device_utils.c  dpu_cache_api.c  dpu_dma_copy.c  dpu_dma_real.c  dpu_server_main.c  gpu_dma_copy.cu
